hphp/hack/test/typecheck/expression_trees/shapes/shape_creation_wrong_type.php.exp
ERROR: File "shape_creation_wrong_type.php", line 11, characters 5-36:
Expression trees only support string literal shape field names. (Parsing[1002])
ERROR: File "shape_creation_wrong_type.php", line 8, characters 8-32:
Invalid argument (Typing[4110])
  File "shape_creation_wrong_type.php", line 7, characters 56-68:
  Expected `ExampleString`
  File "expr_tree.php", line 79, characters 39-48:
  But got `ExampleInt`
